# dde_vis

./: .gitignore  README.md  app.py  homeworks.py  pyproject.toml  supertitanic.py  titanic.py  titanic_db.py  vis_test.ipynb
.streamlit/: _secrets.toml
data/: titanic.parquet
notebooks/: vis_test.ipynb
src/: homeworks.py  supertitanic.py  titanic.py  titanic_db.py
