[project]
name = "dde-vis"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "bokeh (>=3.8.0,<4.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]

[dependency-groups]
dev = [
    "jupyterlab (>=4.4.9,<5.0.0)",
    "pandas-stubs (>=2.3.2.250926,<3.0.0.0)",
    "anywidget (>=0.9.18,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
